data/derived/comb/progs/unify/prog4521.ml.out
Characters 246-250:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type (('a list -> ('b * 'a) list) * 'c) list
       but an expression was expected of type (int * int) list list
       Type ('a list -> ('b * 'a) list) * 'c is not compatible with type
         (int * int) list 
